Add estilos de cuerpo y enlaces

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Spotifu</title>
 </head>
 
-<body>
+<body class="body">
+    <a href="#" class="link">Click Aquí</a>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores quis, dolore obcaecati asperiores repudiandae nihil iure sunt totam aperiam odit ducimus ab harum quibusdam molestias, laudantium quo eaque accusantium optio!</p>
     <i class="icon-home"></i>
 </body>
 
