--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body class="body">
-    <a href="#" class="link">Click Aquí</a>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores quis, dolore obcaecati asperiores repudiandae nihil iure sunt totam aperiam odit ducimus ab harum quibusdam molestias, laudantium quo eaque accusantium optio!</p>
-    <i class="icon-home"></i>
+    <button class="buttonIcon is-white" aria-hidden="true" title="Reproducir">
+        <i class="icon-play" aria-label="Reproducir"></i>
+    </button>
+    <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
+        <i class="icon-play" aria-label="Reproducir"></i>
+    </button>
 </body>
 
 </html>
