--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
 </head>
 
 <body class="body">
-    <button class="buttonIcon is-white" aria-hidden="true" title="Reproducir">
-        <i class="icon-play" aria-label="Reproducir"></i>
-    </button>
-    <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
-        <i class="icon-play" aria-label="Reproducir"></i>
-    </button>
+    <div class="logo">
+        <a href="/" aria-current="page">
+            <img src="./images/spotifu-logo.png" class="logo-images" width="112" height="32" alt="Logo de Spotifu">
+        </a>
+    </div>
+    <div style="background-color:red;">
+        <button class="buttonIcon is-white" aria-hidden="true" title="Reproducir">
+            <i class="icon-play" aria-label="Reproducir"></i>
+        </button>
+        <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
+            <i class="icon-play" aria-label="Reproducir"></i>
+        </button>
+        <button class="buttonIcon" aria-hidden="true" title="Reproducir">
+            <i class="icon-play" aria-label="Reproducir"></i>
+        </button>
+    </div>
 </body>
 
 </html>
