--- a/index.html
+++ b/index.html
@@ -10,22 +10,82 @@
 </head>
 
 <body class="body">
-    <div class="logo">
+    <header class="logo">
         <a href="/" aria-current="page">
             <img src="./images/spotifu-logo.png" class="logo-images" width="112" height="32" alt="Logo de Spotifu">
         </a>
-    </div>
-    <div style="background-color:red;">
-        <button class="buttonIcon is-white" aria-hidden="true" title="Reproducir">
+    </header>
+    <nav class="list" aria-labelledby="library-navigation">
+        <h2 class="list-title" id="library-navigation">Tu Biblioteca</h2>
+        <ul class="list-content">
+            <li class="list-item">
+                <a href="#" class="link">Creada para ti</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Escuchado recientemente</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Tus Me Gusta</a>
+            </li>
+        </ul>
+    </nav>
+    <nav class="list" aria-labelledby="playlist-navigation">
+        <h2 class="list-title" id="playlist-navigation">Playlists</h2>
+        <ul class="list-content">
+            <li class="list-item">
+                <a href="#" class="link">Lo mejor de los mejor</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Naruto al 100% para progr…</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Para cantar en la ducha</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Sin parar</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Naruto openings</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">One Piece</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">This is Pokémon</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Más populares de la semana</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Mis pistas de shazam</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Mis pistas de shazam</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Rock y otras</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Latin</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Pokemon</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Para cantar</a>
+            </li>
+            <li class="list-item">
+                <a href="#" class="link">Electrocore</a>
+            </li>
+        </ul>
+    </nav>
+
+    <button class="buttonIcon is-white" aria-hidden="true" title="Reproducir">
             <i class="icon-play" aria-label="Reproducir"></i>
         </button>
-        <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
+    <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
             <i class="icon-play" aria-label="Reproducir"></i>
         </button>
-        <button class="buttonIcon" aria-hidden="true" title="Reproducir">
-            <i class="icon-play" aria-label="Reproducir"></i>
-        </button>
-    </div>
 </body>
 
 </html>
