--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
             <img src="./images/spotifu-logo.png" class="logo-images" width="112" height="32" alt="Logo de Spotifu">
         </a>
     </header>
+    <nav class="menu" aria-label="Principal">
+        <ul class="menu-list">
+            <li class="menuItem is-active">
+                <a href="/" class="link" aria-current="page">
+                    <i class="icon-home"></i>
+                    <span>Inicio</span>
+                </a>
+            </li>
+            <li class="menuItem">
+                <a href="/" class="link">
+                    <i class="icon-search"></i>
+                    <span>Buscar</span>
+                </a>
+            </li>
+            <li class="menuItem">
+                <a href="/" class="link">
+                    <i class="icon-creditCard"></i>
+                    <span>Premium</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
     <nav class="list" aria-labelledby="library-navigation">
         <h2 class="list-title" id="library-navigation">Tu Biblioteca</h2>
         <ul class="list-content">
