--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
             <h2 class="list-title" id="library-navigation">Tu Biblioteca</h2>
             <ul class="list-content">
                 <li class="list-item">
-                    <a href="#" class="link">Creada para ti</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Creada para ti</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Escuchado recientemente</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Escuchado recientemente</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Tus Me Gusta</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Tus Me Gusta</a>
+                    </span>
                 </li>
             </ul>
         </nav>
@@ -56,49 +62,79 @@
             <h2 class="list-title" id="playlist-navigation">Playlists</h2>
             <ul class="list-content">
                 <li class="list-item">
-                    <a href="#" class="link">Lo mejor de los mejor</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Lo mejor de los mejor</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Naruto al 100% para progr…</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Naruto al 100% para programar</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Para cantar en la ducha</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Para cantar en la ducha</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Sin parar</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Sin parar</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Naruto openings</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Naruto openings</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">One Piece</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">One Piece</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">This is Pokémon</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">This is Pokémon</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Más populares de la semana</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Más populares de la semana para tí que eres un pro</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Mis pistas de shazam</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Mis pistas de shazam</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Mis pistas de shazam</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Mis pistas de shazam</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Rock y otras</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Rock y otras</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Latin</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Latin</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Pokemon</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Pokemon</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Para cantar</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Para cantar</a>
+                    </span>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="link">Electrocore</a>
+                    <span class="ellipsis">
+                        <a href="#" class="link">Electrocore</a>
+                    </span>
                 </li>
             </ul>
         </nav>
