--- a/index.html
+++ b/index.html
@@ -27,10 +27,29 @@
 </head>
 
 <body class="body">
-    <div class="slider">
-        <div class="slider-progress">
-            <button class="slider-button" aria-label="Controlar el progreso de la reproduccíon">
-            </button>
+    <div class="playerControls">
+        <div class="playerControls-buttons">
+            <button class="buttonIcon" aria-hidden="true" title="Anterior">
+                    <i class="icon-prev" aria-label="Anterior"></i>
+                </button>
+            <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
+                    <i class="icon-play" aria-label="Reproducir"></i>
+                </button>
+            <button class="buttonIcon" aria-hidden="true" title="Siguiente">
+                    <i class="icon-next" aria-label="Siguiente"></i>
+                </button>
+        </div>
+        <div class="playerPlayback">
+            <span class="playerPlayback-progressTime">1:12</span>
+            <div class="playerPlayback-slider">
+                <div class="slider">
+                    <div class="slider-progress">
+                        <button class="slider-button" aria-label="Controlar el progreso de la reproduccíon">
+                            </button>
+                    </div>
+                </div>
+            </div>
+            <span class="playerPlayback-progressTime">3:25</span>
         </div>
     </div>
     <div class="sidebar">
@@ -162,13 +181,6 @@
             </ul>
         </nav>
     </div>
-
-    <button class="buttonIcon is-white" aria-hidden="true" title="Reproducir">
-            <i class="icon-play" aria-label="Reproducir"></i>
-        </button>
-    <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
-            <i class="icon-play" aria-label="Reproducir"></i>
-        </button>
 </body>
 
 </html>
