Add Controles de Volumen mas styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body class="body">
     <div class="playerControls">
-        <div class="playerControls-buttons">
+        <div class="playerControls-buttons" aria-label="Controles de reproduccíon">
             <button class="buttonIcon" aria-hidden="true" title="Anterior">
                     <i class="icon-prev" aria-label="Anterior"></i>
                 </button>
@@ -50,6 +50,19 @@
                 </div>
             </div>
             <span class="playerPlayback-progressTime">3:25</span>
+        </div>
+    </div>
+    <div class="playerVolume">
+        <button class="player-control" aria-label="Silenciar" aria-describedby="volume-icon">
+            <i class="icon-volumeUp" id="volume-icon" role="presentation" aria-label="Volumen alto"></i>
+        </button>
+        <div class="playerVolume-slider">
+            <div class="slider">
+                <div class="slider-progress">
+                    <button class="slider-button" aria-label="Controlar el progreso de la reproduccíon">
+                            </button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="sidebar">
