Add Tema actal de reproduccíon mas styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
 </head>
 
 <body class="body">
+    <div class="nowPlaying">
+        <div class="nowPlaying-cover">
+            <img src="./images/grand-escape.png" width="56" height="56" alt="Portada de Grand Escape (feat. Tokio Miura)" title="Portada de Grand Escape (feat. Tokio Miura)">
+        </div>
+        <div class="nowPlaying-details">
+            <div class="nowPlaying-description">
+                <a href="#song" class="nowPlaying-title">Grand Escape (feat. Tokio Miura)
+                </a>
+                <a href="#artist" class="nowPlaying-artist">RADWIMPS, Toko Miura
+                </a>
+            </div>
+            <div class="nowPlaying-actions">
+                <button class="player-control" role="switch" aria-label="Guardar en tu biblioteca" title="Guardar en tu biblioteca">
+                    <i class="icon-heart" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+    </div>
     <div class="playerControls">
         <div class="playerControls-buttons" aria-label="Controles de reproduccíon">
             <button class="buttonIcon" aria-hidden="true" title="Anterior">
