--- a/index.html
+++ b/index.html
@@ -27,62 +27,6 @@
 </head>
 
 <body class="body">
-    <div class="nowPlaying">
-        <div class="nowPlaying-cover">
-            <img src="./images/grand-escape.png" width="56" height="56" alt="Portada de Grand Escape (feat. Tokio Miura)" title="Portada de Grand Escape (feat. Tokio Miura)">
-        </div>
-        <div class="nowPlaying-details">
-            <div class="nowPlaying-description">
-                <a href="#song" class="nowPlaying-title">Grand Escape (feat. Tokio Miura)
-                </a>
-                <a href="#artist" class="nowPlaying-artist">RADWIMPS, Toko Miura
-                </a>
-            </div>
-            <div class="nowPlaying-actions">
-                <button class="player-control" role="switch" aria-label="Guardar en tu biblioteca" title="Guardar en tu biblioteca">
-                    <i class="icon-heart" aria-hidden="true"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-    <div class="playerControls">
-        <div class="playerControls-buttons" aria-label="Controles de reproduccíon">
-            <button class="buttonIcon" aria-hidden="true" title="Anterior">
-                    <i class="icon-prev" aria-label="Anterior"></i>
-                </button>
-            <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
-                    <i class="icon-play" aria-label="Reproducir"></i>
-                </button>
-            <button class="buttonIcon" aria-hidden="true" title="Siguiente">
-                    <i class="icon-next" aria-label="Siguiente"></i>
-                </button>
-        </div>
-        <div class="playerPlayback">
-            <span class="playerPlayback-progressTime">1:12</span>
-            <div class="playerPlayback-slider">
-                <div class="slider">
-                    <div class="slider-progress">
-                        <button class="slider-button" aria-label="Controlar el progreso de la reproduccíon">
-                            </button>
-                    </div>
-                </div>
-            </div>
-            <span class="playerPlayback-progressTime">3:25</span>
-        </div>
-    </div>
-    <div class="playerVolume">
-        <button class="player-control" aria-label="Silenciar" aria-describedby="volume-icon">
-            <i class="icon-volumeUp" id="volume-icon" role="presentation" aria-label="Volumen alto"></i>
-        </button>
-        <div class="playerVolume-slider">
-            <div class="slider">
-                <div class="slider-progress">
-                    <button class="slider-button" aria-label="Controlar el progreso de la reproduccíon">
-                            </button>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="sidebar">
         <header class="logo">
             <a href="/" aria-current="page">
@@ -211,6 +155,70 @@
                 </li>
             </ul>
         </nav>
+    </div>
+    <div class="player">
+        <div class="player-nowPlaying">
+            <div class="nowPlaying">
+                <div class="nowPlaying-cover">
+                    <img src="./images/grand-escape.png" width="56" height="56" alt="Portada de Grand Escape (feat. Tokio Miura)" title="Portada de Grand Escape (feat. Tokio Miura)">
+                </div>
+                <div class="nowPlaying-details">
+                    <div class="nowPlaying-description">
+                        <a href="#song" class="nowPlaying-title">Grand Escape (feat. Tokio Miura)
+                        </a>
+                        <a href="#artist" class="nowPlaying-artist">RADWIMPS, Toko Miura
+                        </a>
+                    </div>
+                    <div class="nowPlaying-actions">
+                        <button class="player-control" role="switch" aria-label="Guardar en tu biblioteca" title="Guardar en tu biblioteca">
+                            <i class="icon-heart" aria-hidden="true"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="player-playerControls">
+            <div class="playerControls">
+                <div class="playerControls-buttons" aria-label="Controles de reproduccíon">
+                    <button class="buttonIcon" aria-hidden="true" title="Anterior">
+                            <i class="icon-prev" aria-label="Anterior"></i>
+                        </button>
+                    <button class="buttonIcon is-primary" aria-hidden="true" title="Reproducir">
+                            <i class="icon-play" aria-label="Reproducir"></i>
+                        </button>
+                    <button class="buttonIcon" aria-hidden="true" title="Siguiente">
+                            <i class="icon-next" aria-label="Siguiente"></i>
+                        </button>
+                </div>
+                <div class="playerPlayback">
+                    <span class="playerPlayback-progressTime">1:12</span>
+                    <div class="playerPlayback-slider">
+                        <div class="slider">
+                            <div class="slider-progress">
+                                <button class="slider-button" aria-label="Controlar el progreso de la reproduccíon">
+                                    </button>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="playerPlayback-progressTime">3:25</span>
+                </div>
+            </div>
+        </div>
+        <div class="player-playerVolume">
+            <div class="playerVolume">
+                <button class="player-control" aria-label="Silenciar" aria-describedby="volume-icon">
+                    <i class="icon-volumeUp" id="volume-icon" role="presentation" aria-label="Volumen alto"></i>
+                </button>
+                <div class="playerVolume-slider">
+                    <div class="slider">
+                        <div class="slider-progress">
+                            <button class="slider-button" aria-label="Controlar el progreso de la reproduccíon">
+                                    </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
