--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
         <h3 class="playlistA-title">Anime Hits</h3>
         <h4 class="playlistA-description">Naruto, Your Name, Weathering With You </h4>
     </div>
+    <div class="playlistB">
+        <div class="playlistB-cover">
+            <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime Hits" title="Cover de la playlist Anime Hits">
+        </div>
+        <div class="playlistB-details">
+            <h3 class="playlistB-title">Naruto Openins & endings
+            </h3>
+            <div class="playlistB-control">
+                <button class="buttonIcon is-primary" aria-label="Reproducir playlist de Anime Hits" title="Reproducir playlist de Anime Hits">
+                    <i class="icon-play" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+    </div>
     <div class="sidebar">
         <header class="logo">
             <a href="/" aria-current="page">
