--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 </head>
 
 <body class="body">
+    <div class="navigation">
+        <button disabled class="navigation-prev" aria-label="Volver" title="Volver">
+            <i class="icon-arrowLleft" aria-hidden="true"></i>
+        </button>
+        <button class="navigation-next" aria-label="Siguiente" title="Siguiente">
+            <i class="icon-arrowRight" aria-hidden="true"></i>
+        </button>
+    </div>
     <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcasts">
         <i class="icon-search" aria-hidden="true"></i>
         <input type="search" placeholder="Artistas, canciones o podcasts">
@@ -36,6 +44,14 @@
             <h2 class="playlistList-title" id="region1">
                 Buenas noches
             </h2>
+            <div class="navigation">
+                <button disabled class="navigation-prev" aria-label="Volver" title="Volver">
+                    <i class="icon-arrowLleft" aria-hidden="true"></i>
+                </button>
+                <button class="navigation-next" aria-label="Siguiente" title="Siguiente">
+                    <i class="icon-arrowRight" aria-hidden="true"></i>
+                </button>
+            </div>
         </div>
         <div class="playlistList-container">
             <div class="playlistB">
@@ -171,6 +187,14 @@
             <h2 class="playlistList-title" id="region2">
                 Escuchado recientemente
             </h2>
+            <div class="navigation">
+                <button disabled class="navigation-prev" aria-label="Volver" title="Volver">
+                    <i class="icon-arrowLleft" aria-hidden="true"></i>
+                </button>
+                <button class="navigation-next" aria-label="Siguiente" title="Siguiente">
+                    <i class="icon-arrowRight" aria-hidden="true"></i>
+                </button>
+            </div>
         </div>
         <div class="playlistList-container">
             <div class="playlistA">
