--- a/index.html
+++ b/index.html
@@ -27,18 +27,22 @@
 </head>
 
 <body class="body">
-    <div class="navigation">
-        <button disabled class="navigation-prev" aria-label="Volver" title="Volver">
-            <i class="icon-arrowLleft" aria-hidden="true"></i>
-        </button>
-        <button class="navigation-next" aria-label="Siguiente" title="Siguiente">
-            <i class="icon-arrowRight" aria-hidden="true"></i>
-        </button>
+    <div class="sticky">
+        <header class="header" aria-label="Barra superior y menú del usuario">
+            <div class="navigation">
+                <button disabled class="navigation-prev" aria-label="Volver" title="Volver">
+                    <i class="icon-arrowLleft" aria-hidden="true"></i>
+                </button>
+                <button class="navigation-next" aria-label="Siguiente" title="Siguiente">
+                    <i class="icon-arrowRight" aria-hidden="true"></i>
+                </button>
+            </div>
+            <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcasts">
+                <i class="icon-search" aria-hidden="true"></i>
+                <input type="search" placeholder="Artistas, canciones o podcasts">
+            </form>
+        </header>
     </div>
-    <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcasts">
-        <i class="icon-search" aria-hidden="true"></i>
-        <input type="search" placeholder="Artistas, canciones o podcasts">
-    </form>
     <section class="playlistList" aria-labelledby="region1">
         <div class="playlistList-top">
             <h2 class="playlistList-title" id="region1">
