--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                                 </a>
                             </div>
                             <div class="nowPlaying-actions">
-                                <button class="player-control" role="switch" aria-label="Guardar en tu biblioteca" title="Guardar en tu biblioteca">
+                                <button class="player-control" role="switch" aria-checked="false" aria-label="Guardar en tu biblioteca" title="Guardar en tu biblioteca">
                                     <i class="icon-heart" aria-hidden="true"></i>
                                 </button>
                             </div>
